--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -15,7 +15,9 @@ body{
   color: #777777;
   background: url("../images/subtle_white_feathers_@2X.png");
 }
-
+ul{
+  list-style: none;
+}
 .container {
     width: 100%;
     max-width: 960px;
@@ -55,7 +57,7 @@ body{
   width: 100%;
   max-width: 960px;
   padding: 30px;
-  margin: 0 0 40px;
+  margin: 20px 0 40px;
   background: #ffffff;
   border: 1px solid #dddddd;
 }
@@ -77,6 +79,7 @@ body{
   nav {
     float: right;
     margin-top: 25px;
+    margin-left: 20px;
   }
   
   nav a {
@@ -202,6 +205,9 @@ input[type=submit] {
 
     margin: 20px 0 500px;
   } 
+  nav{
+    margin-right: 20px;
+  }
 
   
 
@@ -219,7 +225,7 @@ input[type=submit] {
   }
   .main-section{
 
-    margin: 40px 0 40px;
+    margin: -120px 0px 40px ;
   }  
   .auth-image{
     width:100%;
@@ -228,5 +234,10 @@ input[type=submit] {
 
   width: 100%;
  }
- 
+ #masthead {
+  position:sticky;
+ }
+ #masthead.container{
+  position:sticky;
+ }
 }
